added TestPass model, passed field to Test serializer, TestPass view and updated docs
