# src/api/urls.py
@@ -11,4 +11,5 @@ urlpatterns = [
     path('tests', main.test_list_view, name='tests-list'),
     path('tests/my', main.MyTestsView.as_view(), name='tests-my'),
     path('tests/<int:pk>', main.test_detail_view, name='tests-detail'),
+    path('tests/<int:pk>/pass', main.TestPassView.as_view(), name='tests-pass'),
 ]
